# SLT-Usage-Analyzer

./: .gitignore  README.md  pyproject.toml
sltusageanalyzer/: __main__.py  appserver.py  checkhealth.py  devserver.py  utils.py
sltusageanalyzer/assets/: template.config.txt  template.pwsh_script.txt  template.vas_data_script.txt
sltusageanalyzer/static/: style.css
sltusageanalyzer/template/: base.html  total.html  usage.html  vas.html
